--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+@utility gradient {
+  @apply bg-gradient-to-b from-purple-500 to-violet-400;
+}
+
+@utility gradient-title {
+  @apply gradient font-bold text-transparent bg-clip-text pb-1 pr-2;
+}
